# voting-advice-brazil

./: .gitignore  CLAUDE.md  README.md  download_logos.py
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: cache.py  deps.py
backend/app/api/routers/: candidates.py  health.py  quiz.py  themes.py
backend/app/api/schemas/: candidates.py  health.py  quiz.py  themes.py
backend/app/core/: config.py  scoring.py
backend/app/core/entities/: candidate.py
backend/app/core/use_cases/: get_candidate.py  get_candidate_justifications.py  get_candidate_positions.py  get_quiz_questions.py  interfaces.py  list_candidates.py  list_themes.py  submit_quiz.py
backend/app/infrastructure/database/: models.py  repositories.py  seed.py  session.py
backend/tests/: conftest.py  test_candidates.py  test_config.py  test_health.py  test_lgpd_audit.py  test_migrations.py  test_models.py  test_performance.py  test_quiz.py  test_seed.py  test_themes.py
backend/tests/unit/: test_scoring.py
data/propostas/2022/: candidates.json
data/theses/2022/: theses.json
docs/interno/: 2025_09 Modelo de Relatório (2).docx  api-docs.json
mobile/: .gitignore  README.md  pubspec.yaml
mobile/.dart_tool/: package_config.json  package_graph.json
mobile/android/app/: build.gradle.kts
mobile/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
mobile/lib/: app.dart  main.dart
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
(+130 files in other folders)
